# ExampleContactsBook

./: README.md  meson.build
src/: main.d  meson.build
src/controllers/: ContactListController.d  MainWindowController.d  package.d
src/models/: Contact.d  Store.d  package.d
src/utils/: GObjectType.d  ListModel.d  package.d
src/utils/interfaces/: GInterface.d
src/utils/interfaces/gio/: ListModelIF.d
src/views/: BaseListBox.d  ContactRow.d  ContactsWidget.d  MainWindow.d  package.d
