src = [
    'main.d',
    'models/package.d',
    'models/Contact.d',
    'models/Store.d',
    'utils/package.d',
    'utils/ListModel.d',
    'utils/GObjectType.d',
    'views/package.d',
    'views/MainWindow.d',
    'views/BaseListBox.d',
    'views/ContactsWidget.d',
    'views/ContactRow.d',
    'controllers/package.d',
    'controllers/MainWindowController.d',
    'controllers/ContactListController.d'
]

executable('ListModelExample', src, dependencies: [gtkdep, glib], d_unittest: true)